Fix a how-we-work overflow

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -677,7 +677,7 @@ p{
     .swiper-container {
       width: 100vw;
       background-color: transparent;
-      overflow: hidden;
+      overflow: visible;
       overflow-y: visible;
       @include media-breakpoint-up(sm) {
       	min-height: 0;
